deploy/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: shivi-backend-svc
  namespace: shivi-ops
  labels:
    app: shivi-backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: shivi-backend
---
apiVersion: v1
kind: Service
metadata:
  name: shivi-frontend-svc
  namespace: shivi-ops
  labels:
    app: shivi-frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: shivi-frontend
